--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "antd": "^5.21.6",
     "axios": "^1.7.7",
     "cors": "^2.8.5",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
@@ -18,7 +19,8 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-toolkit": "^1.1.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
